overflow issue on mobile

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -12,6 +12,7 @@
 .first-text >span{
     font-size: 2.9rem;
     font-weight:100;
+    text-align: center;
 }
 .first-text span:nth-child(2){
     font-size: 1.1rem;
@@ -94,6 +95,7 @@
 }
 .third-section >span{
     font-size:3rem; 
+    text-align: center;
 }
 .wrapper1{
     width: 100%;
@@ -125,7 +127,7 @@
     background-size: 52vw 623px;
 }
 
-@media only screen and (max-width: 810px) {
+@media only screen and (max-width: 820px) {
     .first-section{
         flex-direction: column;
     }
