--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,9 @@
   border-radius: 20px;
   border: 3px solid rgba(4, 12, 34, 0.75);
 }
+main{
+    overflow: hidden;
+}
 
 body{
     margin:0px;
@@ -18,7 +21,9 @@ body{
     --secondary-background:rgb(23, 34, 63,0.75);
     --primary-font:'Galliard', serif, monospace;
     --secondary-font: 'Monaco',monospace;
-    overflow-x:hidden ;
+    width:100vw;
+    overflow-x: hidden;
+   
     
 }
 .github{
